09/05/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batlib_Baselib_Pervasives.mli: headers removed, channel operations hidden
	* batlib_Baselib_Array.ml*: removed
	* batlib_Baselib_String.ml*: removed
	* batlib_Baselib_List.ml*: removed
	* batlib_Extlib_Array.mli: documented
	* batlib_Baselib_*.mli: added [@replace]
	* batlib_Extlib_*.mli: added [@replace]
	* juice/godi: removed
	* juice/_tags: removed references to GODI
	* batlib_toolchain.ml: removed references to GODI
	
09/04/2008 David Teller <David.Teller@univ-orleans.fr>:
	* Makefile: [META] added
	* Makefile: [doc] restored to [ocamlbuild]
	* META: moved to build/
	* babtlib.spec: moved to build/batteries.spec
	* GUIDELINES: added
	* batlib_Baselib_Str.ml: created
	* odoc_generator_batlib.ml: in [create_fully_qualified_idents_links], [find_renamings] added

09/02/2008 David Teller <David.Teller@univ-orleans.fr>:
	* odoc_generator_batlib.ml: [create_fully_qualified_idents_links] created
	
09/01/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batlib.ml: receives [Control], [Data], [Languages], loses [Concurrency], 
	[Containers], [Math], [Text]
	* batlib_data.ml: recreated, receives [Logical], [Numeric], [Text],
	[Containers]
	* batlib_text.ml: loses [Char], [String], [StringLabels]
	* batlib_text.ml: renamed batlib_languages.ml
	* batlib_containers.ml: loses everything, gains [Persistent] and [Mutable]
	* batlib_persistent.ml: created
	* batlib_text.ml: recreated, with [Buffer], [Char], [String], [StringLabels]
	* glue/: renamed juice/
	
08/31/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batlib_text.ml: receives [Char], [String] and [StringLabels]
	* batlib_data.ml: removed
	* batlib_math.ml: created
	* batlib.ml: replaced [Batlib_data] with [Batlib_math]

08/29/2008 David Teller <David.Teller@univ-orleans.fr>:
	* *: created